--- a/index.html
+++ b/index.html
@@ -7,29 +7,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Резюме</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./WOW-master/css/libs/animate.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="container">
     <div class="row">
         <div class="col-4">
-                <img src="IMG_6452.jpg"/>
-            <h6>Курсы</h6>
-            <ul class="info">
+                <img src="IMG_6452.jpg" class="animated fadeInLeft"/>
+            <h6 class="animated fadeInLeft">Курсы</h6>
+            <ul class="info animated fadeInUp">
                 <li class="info_item">Название курса: Frontend Web-разработчик</li>
                 <li class="info_item">Учебное заведение: Nevis ITDB Tech</li>
                 <li class="info_item">Дата окончания 2021</li>
                 <li class="info_item">Продолжительность: 1 год</li>
             </ul>
-            <h6>Дополнительная информация</h6>
-            <ul class="info">
+            <h6 class="animated fadeInLeft">Дополнительная информация</h6>
+            <ul class="info animated fadeInUp">
                 <li class="info_item">Иностранные языки: Английский (технический)</li>
                 <li class="info_item">Компьютерные языки: Javascript, Typescript</li>
                 <li class="info_item">Дополнительные знания: React JS, Bootstrap, Методология БЭМ, Фигма</li>
                 <li class="info_item">Личные качества: Ответственность, активность, аккуратность, оперативность, стрессоустойчивость, усидчивость.</li>
             </ul>
         </div>
-        <div class="col-8">
+        <div class="col-8 animated fadeInRight">
             <h3 class="font-monospace">Касымбеков Дастан Таалайбекович</h3>
             <span>Web-разработчик</span>
             <ul class="info">
@@ -38,8 +39,8 @@
                 <li class="info_item">Телефон: +996 (701) 335-562</li>
                 <li class="info_item">Электронная почта: dastan-kasymbekov@mail.ru</li>
             </ul>
-            <h6>Личная информация</h6>
-            <ul class="info">
+            <h6 class="animated fadeInRight">Личная информация</h6>
+            <ul class="info animated fadeInRight">
                 <li class="info_item">Гражданство: Кыргызская Республика</li>
                 <li class="info_item">Место проживания: г. Бишкек</li>
                 <li class="info_item">Дата рождения: 24.04.2004 (18 лет)</li>
@@ -47,8 +48,8 @@
                 <li class="info_item">Пол: Мужской</li>
                 <li class="info_item">Семейное положение: Не женат</li>
             </ul>
-            <h6>Опыт работы</h6>
-            <ul class="info">
+            <h6 class="animated fadeInRight">Опыт работы</h6>
+            <ul class="info animated fadeInRight">
                 <li class="info_item">Период работы: Май 2019 - Сентябрь 2022</li>
                 <li class="info_item">Верстальщик Фриланс (Май 2019 - Сентябрь 2019)</li>
                 <li class="info_item">Frontend Developer Фриланс (Июнь 2020 - Ноябрь 2021)</li>
@@ -59,4 +60,11 @@
     </div>
 </div>
 </body>
+
+
+
+<script src="./WOW-master/dist/wow.min.js"></script>
+<script>
+  new WOW().init();
+</script>
 </html>
